outputs/main/reevo-qd_bpp_online_2025-08-07_22-49-41/problem_iter12_response5.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 7
    bins_remain_cap: Union[np.ndarray, List[float], Tuple[float),],
                                                               ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 7
    bins_remain_cap: Union[np.ndarray, List[float], Tuple[float),],
                                                               ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 7
    bins_remain_cap: Union[np.ndarray, List[float], Tuple[float),],
                                                               ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
